# minecraft-clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: shader.vert
include/glad/: glad.h
src/: glad.c  main.cpp
src/game/: Game.cpp  Game.h  GameConstants.h
src/game/players/: Player.cpp  Player.h
src/game/world/: World.cpp  World.h  WorldConstants.h
src/game/world/blocks/: Block.cpp  Block.h  BlockType.h
src/game/world/chunks/: Chunk.cpp  Chunk.h
src/game/world/generation/: WorldGeneration.cpp  WorldGeneration.h  WorldGenerator.cpp  WorldGenerator.h
src/render/: Render.cpp  Render.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/utils/: Assert.h  DebugGui.cpp  DebugGui.h
tests/: CMakeLists.txt  test_coordinates.cpp  test_main.cpp  tests_main.cpp
